# rust-terminal

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: alert.rs  command.rs  lib.rs  terminal.rs  terminal_error.rs
tests/: integration_test.rs
