[package]
name = "rust-terminal"
version = "0.0.0"
edition = "2024"
authors = ["Nicholas Raynes"]
description = "A wrapper abstraction for working with cli commands easily."
license  = "MIT OR Apache-2.0"
repository = ""
keywords = ["rust", "terminal", "command", "console", "tools"]
categories = ["development-tools"]
include = [
    "src/",
    "Cargo.toml",
    "LICENSES/",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
]

[dependencies]
