[package]
name = "rust-terminal"
version = "0.2.1"
edition = "2024"
authors = ["Nicholas Raynes"]
description = "A wrapper abstraction for working with cli commands easily."
license  = "MIT OR Apache-2.0"
repository = "https://github.com/nraynes/rust-terminal"
keywords = ["rust", "terminal", "command", "console", "tools"]
categories = ["development-tools"]
include = [
    "src/",
    "Cargo.toml",
    "LICENSES/",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
]

[dependencies]
rust-alert = "0.3.0"

[dev-dependencies]
gag = "1.0.0"
